# ConnectWaseda

./: .gitignore  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: frontend.yml
backend/: .env_example  .gitignore  Dockerfile  README.md  dockerfile  main.py  manage.py  pyproject.toml  requirements.txt
backend/Connect_Waseda_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/Connect_Waseda_backend/events/: apps.py  models.py  serializers.py  urls.py  views.py
backend/Connect_Waseda_backend/events/migrations/: 0001_initial.py  0002_alter_event_organizer.py  0003_event_category_event_host_notes_event_language.py  0004_rename_date_event_end_date_and_more.py  0005_event_club_rep.py  0006_alter_event_club_rep.py
backend/Connect_Waseda_backend/meetups/: admin.py  apps.py  models.py
backend/Connect_Waseda_backend/meetups/migrations/: 0001_initial.py
backend/Connect_Waseda_backend/scripts/: populate_meetups.py  scrape.py
backend/Connect_Waseda_backend/users/: RegistrationSerializer.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_sync.py
backend/Connect_Waseda_backend/users/migrations/: 0001_initial.py
frontend/: .env.example  dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  syncuser.tsx
frontend/app/components/: event-tabs.tsx  footer.tsx  header.tsx
frontend/app/createevents/: page.tsx
frontend/app/eventcreation/: page.tsx
frontend/app/eventdetails/: page.tsx
frontend/components/: header.tsx
src/app/: layout.tsx  page.tsx
(+14 files in other folders)
