[project]
name = "connectwaseda"
version = "0.1.0"
description = ""
authors = [
    {name = "hud9925",email = "dan.hu@mail.utoronto.ca"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
