[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "django (>=5.2,<6.0)",
  "django-environ (>=0.12.0,<0.13.0)",
  "django-cors-headers (>=4.7.0,<5.0.0)",
  "djangorestframework (>=3.16.0,<4.0.0)",
  "django-allauth[socialaccount] (>=65.7.0,<66.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "PyJWT (>=2.8.0,<3.0.0)",       # replacing jwt
  # "requests (>=2.32.3,<3.0.0)",  # only if you need it
  "requests (>=2.32.4,<3.0.0)",
  "requests-oauthlib (>=2.0.0,<3.0.0)",
  "gunicorn (>=21.0.0,<24.0.0)"
]
